added-content-to-README.md-and-linked-secondary-page-to-CSS

--- a/hoja estilo.css
+++ b/hoja estilo.css
@@ -32,6 +32,7 @@ a#fixedtexto{
     float: left;
     text-align: left;
     margin-left: -70px;
+    margin-top: -50px;
     text-decoration: underline;
     text-decoration-color: red;
     
